--- a/en/about.html
+++ b/en/about.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>For Heroes</title>
+    <title></title>
 	
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta property="og:title" content="For Heroes">
-	<meta property="og:description" content="Ми збираємо на допомогу для наших героїв">
+	<meta property="og:title" content="">
+	<meta property="og:description" content="">
 	<meta property="og:url" content="http://forheroes.org.ua/">
 	<meta property="og:image" content="http://forheroes.org.ua/access/img/open-graph.jpg">
 
 	<meta property="og:locale" content="en_GB">
-	<meta property="og:site_name" content="For Heroes">
+	<meta property="og:site_name" content="">
 	<meta property="og:type" content="article">
 	<meta property="article:publisher" content="https://www.facebook.com/groups/HandmadeForHeroes.UA">
 	
@@ -48,7 +48,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 <body class="">
-	<noscript><div class="noscript">Для полной функциональности этого сайта необходимо включить JavaScript. Вот <a href='http://www.enable-javascript.com/ru/' target='_blank'>инструкции, как включить JavaScript в вашем браузере</a>.</div></noscript>
+	<noscript><div class="noscript">For full functionality of this site it is necessary to enable JavaScript. Here are the <a href='http://www.enable-javascript.com/' target='_blank'> instructions how to enable JavaScript in your web browser</a>.</div></noscript>
 	
 	<div class="load_overlay" id="load_overlay">
 		<div class="load_animate">
@@ -74,7 +74,7 @@
 		<i class="head__flag sp-flag"></i>
 
 		<div class="wrapper">
-			<a class="head__logo" href="./">For heroes</a>
+			<a class="head__logo" href="./"></a>
 
 			<button class="toogle-menu" id="toogleMenuBtn">
 	            <i class="toogle-menu__i"></i>
@@ -84,13 +84,13 @@
 
 			<menu class="head__menu js-headMenu">
 				<li class="head__menu__i">
-					<a href="./">Збір коштів</a>
+					<a href="./"></a>
 				</li>
 				<li class="head__menu__i">
-					<a href="handmade.html">Handmade For Heroes</a>
+					<a href="handmade.html"></a>
 				</li>
 				<li class="head__menu__i">
-					<a href="about.html">Про нас</a>
+					<a href="about.html"></a>
 				</li>
 				<!-- <li class="head__menu__i">
 					<div class="language" id="languageSwitcher">
@@ -105,7 +105,7 @@
 
 	<section class="main-b">
 		<div class="wrapper">
-			<h2 class="main-b__title">Волонтерська група</h2>
+			<h2 class="main-b__title"></h2>
 	
 			<div class="row-fluid">
 				<div class="span4">
@@ -118,7 +118,7 @@
 						</div>
 					</div>
 
-					<h4 class="about-name">Тетяна Ковальчук</h4>
+					<h4 class="about-name"></h4>
 
 					<div class="social-btn text-center js-social">
 						<a class="social-btn__i sp-mi-fb" title="Facebook" href="https://www.facebook.com/tanja.kovalchyk" target="_blank"></a>
@@ -134,7 +134,7 @@
 						</div>
 					</div>
 
-					<h4 class="about-name">Юлія Смойловська</h4>
+					<h4 class="about-name"></h4>
 
 					<div class="social-btn text-center js-social">
 						<a class="social-btn__i sp-mi-fb" title="Facebook" href="https://www.facebook.com/julia.smoylovskaya" target="_blank"></a>
@@ -151,7 +151,7 @@
 						</div>
 					</div>
 
-					<h4 class="about-name">Евгеній Славянський</h4>
+					<h4 class="about-name"></h4>
 
 					<div class="social-btn text-center js-social">
 						<a class="social-btn__i sp-mi-fb" title="Facebook" href="https://www.facebook.com/E.Slavyansky" target="_blank"></a>
@@ -164,19 +164,19 @@
 
 	<footer class="about-footer">
 		<div class="wrapper">
-			<h3 class="about-footer__title">Контакти</h3>
+			<h3 class="about-footer__title"></h3>
 
 			<div class="row-fluid">
 				<div class="span6">
 					<div class="about-footer__info">
 						<i class="icon sp-mi-cl"></i>
-						Телефон: <a href="tel:+38 044 290 86 92">+38 044 290 86 92</a>
+						 <a href="tel:+38 044 290 86 92">+38 044 290 86 92</a>
 					</div>
 				</div>
 				<div class="span6">
 					<div class="about-footer__info">
 						<i class="icon sp-mi-em"></i>
-						Пошта: <script type="text/javascript">var rsihwkd = ['g','u','=','l','s','h','h','o','t','o','a','n','.','r','@','o','l',' ','t','l','e','r','t','e','"','<','i','o','.','p','o','/','g','h',' ','.','c','"','g','a','i','o','f','"','i','i','a','<','g','m','a','.','>','r','>','a','m','a','o','=','f','n','e','e',':','s','u','p','a','a','"','f','a','@'];var jbaurvd = [26,68,42,38,41,3,56,57,13,64,72,52,67,65,55,54,48,36,58,12,44,30,23,27,8,0,16,14,28,59,22,71,61,21,2,63,37,43,31,34,11,19,53,35,51,47,25,70,66,9,1,32,73,4,50,60,45,46,29,7,6,17,5,62,15,40,33,24,39,10,49,18,69,20];var ohdnobm= new Array();for(var i=0;i<jbaurvd.length;i++){ohdnobm[jbaurvd[i]] = rsihwkd[i]; }for(var i=0;i<ohdnobm.length;i++){document.write(ohdnobm[i]);}</script>
+						 <script type="text/javascript">var rsihwkd = ['g','u','=','l','s','h','h','o','t','o','a','n','.','r','@','o','l',' ','t','l','e','r','t','e','"','<','i','o','.','p','o','/','g','h',' ','.','c','"','g','a','i','o','f','"','i','i','a','<','g','m','a','.','>','r','>','a','m','a','o','=','f','n','e','e',':','s','u','p','a','a','"','f','a','@'];var jbaurvd = [26,68,42,38,41,3,56,57,13,64,72,52,67,65,55,54,48,36,58,12,44,30,23,27,8,0,16,14,28,59,22,71,61,21,2,63,37,43,31,34,11,19,53,35,51,47,25,70,66,9,1,32,73,4,50,60,45,46,29,7,6,17,5,62,15,40,33,24,39,10,49,18,69,20];var ohdnobm= new Array();for(var i=0;i<jbaurvd.length;i++){ohdnobm[jbaurvd[i]] = rsihwkd[i]; }for(var i=0;i<ohdnobm.length;i++){document.write(ohdnobm[i]);}</script>
 					</div>
 				</div>
 			</div>
@@ -185,7 +185,7 @@
 		<div class="footer">
 			<div class="wrapper">
 				<p class="footer__t">
-					Розповсюдити інформацію про проект:
+					
 					<span class="social-btn js-social">
 						<a class="social-btn__i sp-mi-fb" id="fb-share" title="Facebook" href="#"></a>
 						<a class="social-btn__i sp-mi-tw" id="tw-share" title="Twitter" href="#"></a>
