--- a/en/handmade.html
+++ b/en/handmade.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Handmade For Heroes - For Heroes</title>
+    <title></title>
 	
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta property="og:title" content="Handmade For Heroes - For Heroes">
-	<meta property="og:description" content="Ми збираємо на допомогу для наших героїв">
+	<meta property="og:title" content="">
+	<meta property="og:description" content="">
 	<meta property="og:url" content="http://forheroes.org.ua/">
 	<meta property="og:image" content="http://forheroes.org.ua/access/img/open-graph.jpg">
 
 	<meta property="og:locale" content="en_GB">
-	<meta property="og:site_name" content="Handmade For Heroes - For Heroes">
+	<meta property="og:site_name" content="">
 	<meta property="og:type" content="article">
 	<meta property="article:publisher" content="https://www.facebook.com/groups/HandmadeForHeroes.UA">
 
@@ -48,7 +48,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 <body class="">
-	<noscript><div class="noscript">Для полной функциональности этого сайта необходимо включить JavaScript. Вот <a href='http://www.enable-javascript.com/ru/' target='_blank'>инструкции, как включить JavaScript в вашем браузере</a>.</div></noscript>
+	<noscript><div class="noscript">For full functionality of this site it is necessary to enable JavaScript. Here are the <a href='http://www.enable-javascript.com/' target='_blank'> instructions how to enable JavaScript in your web browser</a>.</div></noscript>
 	
 	<div class="load_overlay" id="load_overlay">
 		<div class="load_animate">
@@ -74,7 +74,7 @@
 		<i class="head__flag sp-flag"></i>
 
 		<div class="wrapper">
-			<a class="head__logo" href="./">For heroes</a>
+			<a class="head__logo" href="./"></a>
 
 			<button class="toogle-menu" id="toogleMenuBtn">
 	            <i class="toogle-menu__i"></i>
@@ -84,13 +84,13 @@
 
 			<menu class="head__menu js-headMenu">
 				<li class="head__menu__i">
-					<a href="./">Збір коштів</a>
+					<a href="./"></a>
 				</li>
 				<li class="head__menu__i">
-					<a href="handmade.html">Handmade For Heroes</a>
+					<a href="handmade.html"></a>
 				</li>
 				<li class="head__menu__i">
-					<a href="about.html">Про нас</a>
+					<a href="about.html"></a>
 				</li>
 				<!-- <li class="head__menu__i">
 					<div class="language" id="languageSwitcher">
@@ -105,35 +105,35 @@
 
 	<section class="main-b">
 		<div class="wrapper">
-			<h2 class="main-b__title">Як це працює</h2>
+			<h2 class="main-b__title"></h2>
 			
 			<div class="step-b">
 				<div class="step-b__i row-fluid">
 					<div class="span6">
 						<div class="step-b__i__img">
-							<img src="/access/img/how-it-works-1.png" width="200" height="200" alt="Об’єднуємо майстрів">
+							<img src="/access/img/how-it-works-1.png" width="200" height="200" alt="">
 						</div>					
 					</div>
 					<div class="span6">
-						<h3 class="step-b__i__title">Об’єднуємо майстрів</h3>
-						<p class="step-b__i__text">Збираємо людей, які бажають надати для продажу власні вироби</p>
+						<h3 class="step-b__i__title"></h3>
+						<p class="step-b__i__text"></p>
 						<p class="step-b__i__link">
-							<a href="#">Заявка майстра</a>
+							<a href="#"></a>
 						</p>
 					</div>
 					<i class="step-b__i__arow sp-arow"></i>
 				</div>
 				<div class="step-b__i row-fluid">
 					<div class="span6">
-						<h3 class="step-b__i__title">Проводимо ярмарки</h3>
-						<p class="step-b__i__text">Періодично проводимо благодійні розпродажі або інші творчі акції зі збору коштів</p>
+						<h3 class="step-b__i__title"></h3>
+						<p class="step-b__i__text"></p>
 						<p class="step-b__i__link">
-							<a href="#">Наші заходи</a>
+							<a href="#"></a>
 						</p>
 					</div>
 					<div class="span6">
 						<div class="step-b__i__img">
-							<img src="/access/img/how-it-works-2.png" width="200" height="200" alt="Проводимо ярмарки">
+							<img src="/access/img/how-it-works-2.png" width="200" height="200" alt="">
 						</div>					
 					</div>
 					<i class="step-b__i__arow sp-arow"></i>
@@ -141,14 +141,14 @@
 				<div class="step-b__i row-fluid">
 					<div class="span6">
 						<div class="step-b__i__img">
-							<img src="/access/img/how-it-works-3.png" width="200" height="200" alt="Допомагаємо нашим героям">
+							<img src="/access/img/how-it-works-3.png" width="200" height="200" alt="">
 						</div>					
 					</div>
 					<div class="span6">
-						<h3 class="step-b__i__title">Допомагаємо нашим героям</h3>
-						<p class="step-b__i__text">Зібрані кошти відправляємо на допомогому військовим: ВСУ або добровольцям</p>
+						<h3 class="step-b__i__title"></h3>
+						<p class="step-b__i__text"></p>
 						<p class="step-b__i__link">
-							<a href="#">Куди йдуть кошти</a>
+							<a href="#"></a>
 						</p>
 					</div>
 				</div>
@@ -159,7 +159,7 @@
 	<footer class="footer">
 		<div class="wrapper">
 			<p class="footer__t">
-				Розповсюдити інформацію про проект:
+				
 				<span class="social-btn js-social">
 					<a class="social-btn__i sp-mi-fb" id="fb-share" title="Facebook" href="#"></a>
 						<a class="social-btn__i sp-mi-tw" id="tw-share" title="Twitter" href="#"></a>
