--- a/en/index.html
+++ b/en/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>For Heroes</title>
+    <title></title>
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta property="og:title" content="For Heroes">
-	<meta property="og:description" content="Ми збираємо на допомогу для наших героїв">
+	<meta property="og:title" content="">
+	<meta property="og:description" content="">
 	<meta property="og:url" content="http://forheroes.org.ua/">
 	<meta property="og:image" content="http://forheroes.org.ua/access/img/open-graph.jpg">
 
 	<meta property="og:locale" content="en_GB">
-	<meta property="og:site_name" content="For Heroes">
+	<meta property="og:site_name" content="">
 	<meta property="og:type" content="article">
 	<meta property="article:publisher" content="https://www.facebook.com/groups/HandmadeForHeroes.UA">
 
@@ -48,7 +48,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 <body class="">
-	<noscript><div class="noscript">Для полной функциональности этого сайта необходимо включить JavaScript. Вот <a href='http://www.enable-javascript.com/ru/' target='_blank'>инструкции, как включить JavaScript в вашем браузере</a>.</div></noscript>
+	<noscript><div class="noscript">For full functionality of this site it is necessary to enable JavaScript. Here are the <a href='http://www.enable-javascript.com/' target='_blank'> instructions how to enable JavaScript in your web browser</a>.</div></noscript>
 	
 	<div class="load_overlay" id="load_overlay">
 		<div class="load_animate">
@@ -74,7 +74,7 @@
 		<i class="head__flag sp-flag"></i>
 
 		<div class="wrapper">
-			<a class="head__logo" href="./">For heroes</a>
+			<a class="head__logo" href="./"></a>
 
 			<button class="toogle-menu" id="toogleMenuBtn">
 	            <i class="toogle-menu__i"></i>
@@ -84,13 +84,13 @@
 
 			<menu class="head__menu js-headMenu">
 				<li class="head__menu__i">
-					<a href="./">Збір коштів</a>
+					<a href="./"></a>
 				</li>
 				<li class="head__menu__i">
-					<a href="handmade.html">Handmade For Heroes</a>
+					<a href="handmade.html"></a>
 				</li>
 				<li class="head__menu__i">
-					<a href="about.html">Про нас</a>
+					<a href="about.html"></a>
 				</li>
 				<!-- <li class="head__menu__i">
 					<div class="language" id="languageSwitcher">
@@ -387,7 +387,7 @@
 	<footer class="footer">
 		<div class="wrapper">
 			<p class="footer__t">
-				Розповсюдити інформацію про проект:
+				
 				<span class="social-btn js-social">
 					<a class="social-btn__i sp-mi-fb" id="fb-share" title="Facebook" href="#"></a>
 						<a class="social-btn__i sp-mi-tw" id="tw-share" title="Twitter" href="#"></a>
