--- a/pl/about.html
+++ b/pl/about.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<meta property="og:title" content="For Heroes">
-	<meta property="og:description" content="Zbieramy, aby pomóc naszym bohaterom">
+	<meta property="og:description" content="Zbieramy na pomoc dla naszych bohaterów">
 	<meta property="og:url" content="http://forheroes.org.ua/">
 	<meta property="og:image" content="http://forheroes.org.ua/access/img/open-graph.jpg">
 
@@ -84,13 +84,13 @@
 
 			<menu class="head__menu js-headMenu">
 				<li class="head__menu__i">
-					<a href="./">Fundraising</a>
+					<a href="./">Zbiórka pieniędzy</a>
 				</li>
 				<li class="head__menu__i">
-					<a href="handmade.html">Handmade For Heroes</a>
+					<a href="handmade.html">Zebrano</a>
 				</li>
 				<li class="head__menu__i">
-					<a href="about.html">o Nas</a>
+					<a href="about.html">Trzeba zebrać</a>
 				</li>
 				<!-- <li class="head__menu__i">
 					<div class="language" id="languageSwitcher">
@@ -105,7 +105,7 @@
 
 	<section class="main-b">
 		<div class="wrapper">
-			<h2 class="main-b__title">grupa Wolontariat</h2>
+			<h2 class="main-b__title">Grupa wolontariuszy</h2>
 	
 			<div class="row-fluid">
 				<div class="span4">
@@ -118,7 +118,7 @@
 						</div>
 					</div>
 
-					<h4 class="about-name">Tatiana Kowalczuk</h4>
+					<h4 class="about-name">Tetiana Kowalczuk</h4>
 
 					<div class="social-btn text-center js-social">
 						<a class="social-btn__i sp-mi-fb" title="Facebook" href="https://www.facebook.com/tanja.kovalchyk" target="_blank"></a>
@@ -134,7 +134,7 @@
 						</div>
 					</div>
 
-					<h4 class="about-name">Julia Smoylovska</h4>
+					<h4 class="about-name">Julia Smojlowska</h4>
 
 					<div class="social-btn text-center js-social">
 						<a class="social-btn__i sp-mi-fb" title="Facebook" href="https://www.facebook.com/julia.smoylovskaya" target="_blank"></a>
@@ -151,7 +151,7 @@
 						</div>
 					</div>
 
-					<h4 class="about-name">Jewgienij Slawjansk</h4>
+					<h4 class="about-name">Jewhenij Slawianski</h4>
 
 					<div class="social-btn text-center js-social">
 						<a class="social-btn__i sp-mi-fb" title="Facebook" href="https://www.facebook.com/E.Slavyansky" target="_blank"></a>
@@ -170,13 +170,13 @@
 				<div class="span6">
 					<div class="about-footer__info">
 						<i class="icon sp-mi-cl"></i>
-						telefon: <a href="tel:+38 044 290 86 92">+38 044 290 86 92</a>
+						Numer telefonu: <a href="tel:+38 044 290 86 92">+38 044 290 86 92</a>
 					</div>
 				</div>
 				<div class="span6">
 					<div class="about-footer__info">
 						<i class="icon sp-mi-em"></i>
-						poczta: <script type="text/javascript">var rsihwkd = ['g','u','=','l','s','h','h','o','t','o','a','n','.','r','@','o','l',' ','t','l','e','r','t','e','"','<','i','o','.','p','o','/','g','h',' ','.','c','"','g','a','i','o','f','"','i','i','a','<','g','m','a','.','>','r','>','a','m','a','o','=','f','n','e','e',':','s','u','p','a','a','"','f','a','@'];var jbaurvd = [26,68,42,38,41,3,56,57,13,64,72,52,67,65,55,54,48,36,58,12,44,30,23,27,8,0,16,14,28,59,22,71,61,21,2,63,37,43,31,34,11,19,53,35,51,47,25,70,66,9,1,32,73,4,50,60,45,46,29,7,6,17,5,62,15,40,33,24,39,10,49,18,69,20];var ohdnobm= new Array();for(var i=0;i<jbaurvd.length;i++){ohdnobm[jbaurvd[i]] = rsihwkd[i]; }for(var i=0;i<ohdnobm.length;i++){document.write(ohdnobm[i]);}</script>
+						e-mail: <script type="text/javascript">var rsihwkd = ['g','u','=','l','s','h','h','o','t','o','a','n','.','r','@','o','l',' ','t','l','e','r','t','e','"','<','i','o','.','p','o','/','g','h',' ','.','c','"','g','a','i','o','f','"','i','i','a','<','g','m','a','.','>','r','>','a','m','a','o','=','f','n','e','e',':','s','u','p','a','a','"','f','a','@'];var jbaurvd = [26,68,42,38,41,3,56,57,13,64,72,52,67,65,55,54,48,36,58,12,44,30,23,27,8,0,16,14,28,59,22,71,61,21,2,63,37,43,31,34,11,19,53,35,51,47,25,70,66,9,1,32,73,4,50,60,45,46,29,7,6,17,5,62,15,40,33,24,39,10,49,18,69,20];var ohdnobm= new Array();for(var i=0;i<jbaurvd.length;i++){ohdnobm[jbaurvd[i]] = rsihwkd[i]; }for(var i=0;i<ohdnobm.length;i++){document.write(ohdnobm[i]);}</script>
 					</div>
 				</div>
 			</div>
@@ -185,7 +185,7 @@
 		<div class="footer">
 			<div class="wrapper">
 				<p class="footer__t">
-					Komunikować się w projekt:
+					Udostępnij informację o projekcie
 					<span class="social-btn js-social">
 						<a class="social-btn__i sp-mi-fb" id="fb-share" title="Facebook" href="#"></a>
 						<a class="social-btn__i sp-mi-tw" id="tw-share" title="Twitter" href="#"></a>
