--- a/pl/handmade.html
+++ b/pl/handmade.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<meta property="og:title" content="Handmade For Heroes - For Heroes">
-	<meta property="og:description" content="Zbieramy, aby pomóc naszym bohaterom">
+	<meta property="og:description" content="Zbieramy na pomoc dla naszych bohaterów">
 	<meta property="og:url" content="http://forheroes.org.ua/">
 	<meta property="og:image" content="http://forheroes.org.ua/access/img/open-graph.jpg">
 
@@ -84,13 +84,13 @@
 
 			<menu class="head__menu js-headMenu">
 				<li class="head__menu__i">
-					<a href="./">Fundraising</a>
+					<a href="./">Zbiórka pieniędzy</a>
 				</li>
 				<li class="head__menu__i">
-					<a href="handmade.html">Handmade For Heroes</a>
+					<a href="handmade.html">Zebrano</a>
 				</li>
 				<li class="head__menu__i">
-					<a href="about.html">o Nas</a>
+					<a href="about.html">Trzeba zebrać</a>
 				</li>
 				<!-- <li class="head__menu__i">
 					<div class="language" id="languageSwitcher">
@@ -111,29 +111,29 @@
 				<div class="step-b__i row-fluid">
 					<div class="span6">
 						<div class="step-b__i__img">
-							<img src="/access/img/how-it-works-1.png" width="200" height="200" alt="jednoczy artystów">
+							<img src="/access/img/how-it-works-1.png" width="200" height="200" alt="Jednoczymy rzemieślników">
 						</div>					
 					</div>
 					<div class="span6">
-						<h3 class="step-b__i__title">jednoczy artystów</h3>
-						<p class="step-b__i__text">Stawianie ludzi, którzy chcą dostarczyć swoje produkty na sprzedaż</p>
+						<h3 class="step-b__i__title">Jednoczymy rzemieślników</h3>
+						<p class="step-b__i__text">Jednoczymy ludzi, którzy chętnie oddają do sprzedaży własne wyroby</p>
 						<p class="step-b__i__link">
-							<a href="#">Kreator aplikacji</a>
+							<a href="#">Zgłoszenie rzemieślnika</a>
 						</p>
 					</div>
 					<i class="step-b__i__arow sp-arow"></i>
 				</div>
 				<div class="step-b__i row-fluid">
 					<div class="span6">
-						<h3 class="step-b__i__title">Posiadamy targi</h3>
-						<p class="step-b__i__text">Okresowo prowadzenia sprzedaży charytatywne lub inne twórcze działania w celu pozyskiwania funduszy</p>
+						<h3 class="step-b__i__title">Organizujemy targi</h3>
+						<p class="step-b__i__text">Periodycznie organizujemy harytatywne wyprzedaże lub inne wydarzenia twórcze w celu zebrania pieniędzy</p>
 						<p class="step-b__i__link">
-							<a href="#">Nasze działania</a>
+							<a href="#">Nasze imprezy</a>
 						</p>
 					</div>
 					<div class="span6">
 						<div class="step-b__i__img">
-							<img src="/access/img/how-it-works-2.png" width="200" height="200" alt="Posiadamy targi">
+							<img src="/access/img/how-it-works-2.png" width="200" height="200" alt="Organizujemy targi">
 						</div>					
 					</div>
 					<i class="step-b__i__arow sp-arow"></i>
@@ -146,9 +146,9 @@
 					</div>
 					<div class="span6">
 						<h3 class="step-b__i__title">Pomagamy naszym bohaterom</h3>
-						<p class="step-b__i__text">Zebrane fundusze wysłać pomoc wojskową: U ochotników indziej</p>
+						<p class="step-b__i__text">Zebrane pieniądze przekazujemy na pomoc wojskowym: SZU albo ochotnikom</p>
 						<p class="step-b__i__link">
-							<a href="#">Gdzie trafiają pieniądze</a>
+							<a href="#">Przeznaczenie pieniędzy</a>
 						</p>
 					</div>
 				</div>
@@ -159,7 +159,7 @@
 	<footer class="footer">
 		<div class="wrapper">
 			<p class="footer__t">
-				Komunikować się w projekt:
+				Udostępnij informację o projekcie
 				<span class="social-btn js-social">
 					<a class="social-btn__i sp-mi-fb" id="fb-share" title="Facebook" href="#"></a>
 						<a class="social-btn__i sp-mi-tw" id="tw-share" title="Twitter" href="#"></a>
