--- a/pl/index.html
+++ b/pl/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<meta property="og:title" content="For Heroes">
-	<meta property="og:description" content="Zbieramy, aby pomóc naszym bohaterom">
+	<meta property="og:description" content="Zbieramy na pomoc dla naszych bohaterów">
 	<meta property="og:url" content="http://forheroes.org.ua/">
 	<meta property="og:image" content="http://forheroes.org.ua/access/img/open-graph.jpg">
 
@@ -84,13 +84,13 @@
 
 			<menu class="head__menu js-headMenu">
 				<li class="head__menu__i">
-					<a href="./">Fundraising</a>
+					<a href="./">Zbiórka pieniędzy</a>
 				</li>
 				<li class="head__menu__i">
-					<a href="handmade.html">Handmade For Heroes</a>
+					<a href="handmade.html">Zebrano</a>
 				</li>
 				<li class="head__menu__i">
-					<a href="about.html">o Nas</a>
+					<a href="about.html">Trzeba zebrać</a>
 				</li>
 				<!-- <li class="head__menu__i">
 					<div class="language" id="languageSwitcher">
@@ -387,7 +387,7 @@
 	<footer class="footer">
 		<div class="wrapper">
 			<p class="footer__t">
-				Komunikować się w projekt:
+				Udostępnij informację o projekcie
 				<span class="social-btn js-social">
 					<a class="social-btn__i sp-mi-fb" id="fb-share" title="Facebook" href="#"></a>
 						<a class="social-btn__i sp-mi-tw" id="tw-share" title="Twitter" href="#"></a>
