--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
 
 	<meta property="og:title" content="Про нас - For heroes">
 	<meta property="og:description" content="Ми збираємо на допомогу для наших героїв">
-	<meta property="og:url" content="http://forheroes.org.ua/">
-	<meta property="og:image" content="http://forheroes.org.ua/images/open-graph.jpg">
+	<meta property="og:url" content="https://forheroes.org.ua/">
+	<meta property="og:image" content="https://forheroes.org.ua/images/open-graph.jpg">
 
 	<meta property="og:locale" content="ua_UA">
 	<meta property="og:site_name" content="Про нас - For heroes">
@@ -40,7 +40,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
-	<link href="http://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Cuprum:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 <body class="load">
 	<noscript><div class="noscript">Для полной функциональности этого сайта необходимо включить JavaScript. Вот <a href="http://www.enable-javascript.com/ru/" target="_blank">инструкции, как включить JavaScript в вашем браузере</a>.</div></noscript>
